# rat

./: .gitignore  CMakeLists.txt  Cat.g4  CatInferVisitor.cpp  CatInferVisitor.h  Constraint.cpp  Constraint.h  Dockerfile  Logic.g4  Makefile  ProofNode.cpp  ProofNode.h  ProofObligation.cpp  ProofObligation.h  ProofRule.h  Prover.h  Readme.md  RegSolver.cpp  RegSolver.h  Relation.cpp  Relation.h  Solver.cpp  Solver.h  TODO  build.sh  clean.sh  compile.sh  dnf.dot  infinite.dot  inital.dot  main.cpp  modal.dot  reg.dot  reg.ipynb  request.dot  run.sh  test.dot
cat/: a.cat  aa.cat  aarch64-modified.cat  bla  oota-modified.cat  oota-simple.cat  oota.cat  ptx-v6.0.cat  ptx-v6.0_rewrite.cat  ptx6.cat  ptx6_2.cat  ptx6_2_rewrite.cat  ptx6_rewrite.cat  ptx7-5.cat  ptx7-5_2.cat  sc.cat  tso-modified.cat  tso.cat
cmake/: ExternalAntlr4Cpp.cmake
evaluation/: references.txt  stdlib.cat
evaluation/guiding-example/: lkmm-new.cat
evaluation/lkmm-simp/: lkmm-v00.cat
issues/: perf
issues/bugs/: bug_nontermination.txt  bug_sporadic.txt  bug_sporadic_model.dot  bug_sporadic_proof.dot  bug_unsound_simple.txt
output/: converserequestcalc.dot  counterexample.dot  infinite-debug.dot  r.dot  regular-debug.dot  regular.dot  t.dot  test.dot  test2.dot
proofs/: 2.dot  arm_oota  bla.dot  ff.dot  guided.dot  guided2.dot  guided2complete.dot  kater_3_1-eco  kater_3_1-eco-n  kater_3_3-ra  kater_3_3-ra-2  kater_3_3-ra-n  kater_3_5-co  kater_3_5-co-back  kater_3_6-tso  kater_ra_3_2  playground  ppo  ppofix  ppofixsubrel  problem uniproc rfint-po.dot  ptx  ptx6  ptx_proof  sc_oota  sc_tso  test  tso-oota-problem.dot  uniproc1-uniproc2.dot
proofs/kater/: base-theory.cat  comp-c11-power-simpl.kat  comp-c11-power-weak.kat  comp-imm-arm8.kat  comp-imm-tso.kat  comp-power-power-simpl.kat  comp-psc-tso-rfis.kat  comp-psc-tso2.kat  comp-psc-tso3.kat  comp-rc11-arm8.kat  comp-rc11-imm.kat  comp-rc11-power-weak.kat  comp-rc11-tso.kat  comp-rc11f-power-simpl-full.kat  comp-rc11ra-power.kat  comp-rc11rw-power-simpl-full.kat  comp-rc11s-arm8.kat  comp-rc11s-tso.kat  demo-ra.kat  demo-tso.kat  eq-co.kat  eq-eco-user.kat  eq-rc11-rc112.kat  eq-sc-scfm.kat  eq-tso-tsofm.kat
proofs/tests/: bound-let-only.1  bound-let.1  bound.0  bound.1  hard  test-inv  test0  test1  test2  test2f  test8  trans2
proofs/todo/: kater_rc11_to_arm8  kater_tso  ptx6  ptx62  test1  tso_oota  uniproc
src/: Annotated.cpp  Annotated.h  Annotation.cpp  Annotation.h  Assumption.cpp  Assumption.h  CatInferVisitor.cpp  CatInferVisitor.h  Constraint.cpp  Constraint.h  Formula.cpp  Formula.h  Literal.cpp  Literal.h  LogicVisitor.h  Metastatement.cpp  Metastatement.h  NodeQueue.cpp  OccurrenceCounter.cpp  OccurrenceCounter.h  Predicate.cpp  Predicate.h  Preprocessing.h  ProofNode.h  ProofRule.h  RegularNode.cpp  RegularNode.h  RegularTableau.cpp  RegularTableau.h  RegularTableauNode.cpp  Relation.cpp  Relation.h  Renaming.cpp  Renaming.h  Rules.cpp  Rules.h  Set.cpp  Set.h  Solver.cpp  Solver.h  (+12 more)
src/basic/: Annotated.cpp  Annotated.h  Annotation.cpp  Annotation.h  CanonicalString.h  Literal.cpp  Literal.h  Model.cpp  Model.h  Relation.cpp  Relation.h  Renaming.cpp  Renaming.h  Set.cpp  Set.h
src/cat/: Constraint.cpp  Constraint.h
src/infinte/: ProofNode.cpp  ProofNode.h  Solver.cpp  Solver.h
test/: TODO  a1.cat  a2.cat  b1.cat  b2.cat  c1.cat  c2.cat  d1.cat  d2.cat  lemma1.cat  lemma2.cat  split1.cat  split2.cat  uniproc1.cat  uniproc12-variant2.cat  uniproc121.cat  uniproc2.cat  uniproc22.cat  uniproc221.cat  unlemma2.cat
tests/: 1  aaaaaa  aaaaaa2  arm8_oota  ataworld  bound-let-only.1  bound-let.1  bound.0  eco  eco1f  eco2  eco2f  eco3f  econ  econ2  id  id2  id3  id4  id5  id6  id7  kater_co  kater_eco  kater_eco_inv  kater_ra_3_2  kater_rc11  kater_rc11_copy  kater_rc11_to_arm8  min  min2  multiple  norm  playground  run.sh  sc_oota  sc_tso  set  set-algebra-laws  set-base  (+34 more)
(+29 files in other folders)
